--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,10 @@ button {
 	float: left;
 }
 
+.noMarginRight{
+	margin-right: 0px !important;
+}
+
 /*--Nav---*/
 nav {
 	background: #fcf9fa;
@@ -455,32 +459,27 @@ nav .logo img {
 .braThumb h3 {
 	font-size: 80%;
 }
-.middle {
-	width: 220px;
-	float: left;
-	position: relative;
-	top: -20px;
-}
-
-.middle img {
-	width: 220px;
-}
-
-#findYourSize:hover {
-	-webkit-filter: brightness(90%) contrast(150%);
-	background: none;
-}
 
 #mainGallery header h1 {
 	margin: 0 !important;
 }
-.middleWrap{
-	width: 360px;
-	text-align: center;	
-	border-top: solid 1px rgba(9,35,36,.1);
-	border-bottom: solid 1px rgba(9,35,36,.1);
-	float: left;
-	margin-top:60px;
+
+/*Single Item View*/
+.singleItemFigure img{
+	width: 100%;
+	box-shadow: 0 0 1px rgba(9,35,36,.3);
+}
+
+.singleItemDescription {
+	height: 620px;
+}
+
+.singleItemDescription .wrapper {
+	height: 480px;	
+}
+
+.singleItemThumbs img {
+	box-shadow: 0 0 1px rgba(9,35,36,.3);
 }
 
 
@@ -783,11 +782,12 @@ footer .copyright{
 }
 
 #modal {
-	width: 50%;
+	width: 960px;
 	position: absolute;
+	display: none;
 	left: 50%;
 	padding: 20px;
-	margin-left: -25%;
+	margin-left: -500px;
 	z-index:  100001;
 	background: #FCF9FA;
 	box-shadow: 0 0 10px rgba(9,35,36,.5);
@@ -795,20 +795,21 @@ footer .copyright{
 }
 
 #closeModal {
-	font-family: Helvetica, Arial, "Lucida Grande", sans-serif; 
 	font-size: 75%;
 	display: inline-block;
-	text-align: center;
-	padding: .25em .5em;
+	text-align: right;
+	padding: .25em 0;
 	border-radius: 5px;
-	border: solid 1px #FC9AC5;
-	position: relative;
+	position: absolute;
 	float: right;
 	font-variant: small-caps;
 	cursor: pointer;
+	margin: -10px 0 0 905px;
+	width: 60px;
 }
 
 #closeModal:hover {
-	background: #FC9AC5;
-	color: #fff !important;
+	text-decoration: underline;
+	background: none;
+	color: inherit;
 }
