--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ a:hover {
 h1 {
 	font-family: "Lato", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 	font-size: 300%;
-	margin: 0 0 1em 0;
+	margin: 0.5em 0 0.5em 0;
 	letter-spacing: 0px;
 }
 
@@ -90,7 +90,7 @@ h2 {
 	font-family:"Lato", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 	color: rgba(9,35,36,.4);
 	font-size: 150%;
-	margin: .7em 0 .7em 0;
+	margin: .5em 0 .5em 0;
 }
 
 p {
@@ -212,15 +212,28 @@ nav a {
 
 nav .logo {
 	height: 30px;
+	width: 80px;
 	position: relative;
 	float: left;
-	margin: -2px 0 0 30px;
+	margin: -3px 0 0 20px;
 	cursor: pointer;
+	background: url(/img/css/logo.png);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+nav .logo:hover{
+	height: 30px;
+	width: 80px;
+	position: relative;
+	float: left;
+	margin: -3px 0 0 20px;
+	cursor: pointer;
+	background: url(/img/css/logo-mono.png);
+	background-repeat: no-repeat;
+	background-size: 100%;
+	background-color: #092324;
 }
 
-nav .logo img {
-	height: 35px;
-}
 .navMain{
 	width: 960px;
 	margin: 0 auto;
@@ -231,7 +244,7 @@ nav .logo img {
 	float: right;
 	position: relative;
 	top: 6px;
-	margin-right: 30PX;
+	margin-right: 30px;
 }
 
 /*First Fold*/	
@@ -303,15 +316,21 @@ nav .logo img {
 .illustration2 {
 	background-image: url(../img/css/overbust.jpg);
 }
+#chartLabel {
+	background-image: url(../img/css/chartlabel.png);
+	background-repeat: no-repeat;
+	width: 220px;
+	height: 220px;
+	margin: 40px 0;
+}
 
 #sizeTable {
 	display: block;
-	padding: 20px 0;
+	padding: 30px;
 	text-align: left !important;
 }
 
 #sizeTable table{
-	margin: 10px 0 0 0;
 	font-size: 14px;
 	text-align: left;
 }
@@ -385,7 +404,7 @@ nav .logo img {
 	font-weight: bold;
 	position: absolute;
 	margin-top: 8px;
-	z-index: 10000;
+	z-index: 999;
 	color:  rgba(252, 249, 250, .6);
 }
 
@@ -427,27 +446,28 @@ nav .logo img {
 }
 
 #calculateSize {
-	margin: 0;
+	margin: 60px 0;
+	width: 220px;
 }
 
-#calculateSize:hover{
-
-}
-
-.calculateSizeSection{
+#calculateSizeSection {
 	width: 100%;
 	text-align: center;
+	background: #EEFF00;
 }
 
 .sizeSuggestionWrapper {
 	float: left;
 	width: 100%;
-	background: #EEFF00;
+	
 }
 
 #sizeSuggestion {
 	display: none;
 	clear: both;
+	font-family: "Cassanet", "Lato", "HelveticaNeue-Light", "Helvetica", sans-serif;
+	font-size: 100%;
+	background: #EEFF00;
 }
 
 
