--- a/css/style.css
+++ b/css/style.css
@@ -391,13 +391,12 @@ nav .logo:hover{
 	display: inline-block;
 }
 .sizeCalculator label {
-	display: inline-block;
-	margin: 10px 10px 20px 0;
-	font-size: 11px;
+	display: block;
+	font-size: 12px;
 	font-weight: bold;
 	text-align: left;
-	text-transform: uppercase;	
-	width: 240px;
+	text-transform: uppercase;
+	margin: 10px 0;	
 }
 
 .sizeCalculator .sliderLeftLabel,
@@ -405,7 +404,7 @@ nav .logo:hover{
 	text-transform: uppercase; 
 	font-weight: bold;
 	position: absolute;
-	margin-top: 8px;
+	margin-top: 6px;
 	z-index: 999;
 	color:  rgba(252, 249, 250, .6);
 }
@@ -414,7 +413,7 @@ nav .logo:hover{
 	margin-left: 4px;
 }
 .sizeCalculator .sliderRightLabel {
-	margin-left: 330px;	
+	margin-left: 430px;	
 }
 
 .ui-slider-handle {
@@ -426,20 +425,20 @@ nav .logo:hover{
 	display: inline-block;
 	position: relative;
 	top: 4px;
-	width: 360px;
-	margin: 0px 15px 0 0;
+	width: 100%;
+	margin: 0 0px 0 0;
 	background: #092324; 
 	height: 16px;
 }
 
 .sizeCalculator .sliderLabel{
 	display: inline-block;
-	width: 50px;
 	text-transform: uppercase;
-	font-size: 14px;
+	font-size: 150%;
 	font-weight: bold;
-	background: rgba(9,35,36,.2);
+	background: #EEFF00;
 	text-align: center;
+	margin-right: -20px;
 	
 }
 
@@ -450,6 +449,12 @@ nav .logo:hover{
 #calculateSize {
 	margin: 1em 0;
 	width: 220px;
+}
+#calculateSize.button-huge {
+	background: #30c4c9;
+}
+#calculateSize.button-huge:hover {
+	background: #092324;
 }
 
 #calculateSizeSection {
