--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,7 @@ nav .logo:hover{
 
 #sizeTable {
 	display: block;
-	padding: 30px;
+	padding: 30px 0;
 	text-align: left !important;
 }
 
@@ -376,15 +376,21 @@ nav .logo:hover{
 }
 
 #sizeTable td.highlighted {
-	background: #092324 !important;
+	background: #30c4c9 !important;
 	font-weight: bold;
 	color: #fcf9fa;
 }
 
-#sizeTable td.highlighted:hover .tooltip,
-#sizeTable td.highlighted .tooltip {
+#sizeTable td.highlighted:hover .tooltip {
 	border: solid 1px #EEFF00;
 	color: rgba(9,35,36,1);
+}
+#sizeTable td.highlighted .tooltip {
+	border: solid 1px #EEFF00;
+	background-color: #30c4c9;
+}
+td.highlighted .tooltip hr {
+	border-top: solid 1px #fcf9fa;
 }
 
 .sizeCalculator {
@@ -461,6 +467,7 @@ nav .logo:hover{
 	width: 100%;
 	text-align: center;
 	background: #EEFF00;
+	padding-bottom: 30px;
 }
 
 .sizeSuggestionWrapper {
