--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,7 @@ nav .logo:hover{
 
 #sizeTable {
 	display: block;
-	padding: 30px;
+	padding: 30px 0;
 	text-align: left !important;
 }
 
@@ -475,6 +475,7 @@ nav .logo:hover{
 	font-family: "Cassanet", "Lato", "HelveticaNeue-Light", "Helvetica", sans-serif;
 	font-size: 100%;
 	background: #EEFF00;
+	text-align: center;
 }
 
 
