--- a/css/style.css
+++ b/css/style.css
@@ -504,6 +504,15 @@ td.highlighted .tooltip hr {
 	background: #FCF9FA;
 	margin-bottom: 20px;
 	box-shadow: 0 0 1px rgba(9,35,36,.3) inset;
+	cursor: pointer;
+}
+
+.braThumb:hover img {
+	-webkit-filter: contrast(115%);
+	-moz-filter: contrast(115%);
+	-ms-filter: contrast(115%);
+	-o-filter: contrast(115%);
+	filter: contrast(115%);
 }
 
 .braThumb figcaption{
@@ -638,6 +647,10 @@ td.highlighted .tooltip hr {
 
 #testimonials .face:hover img{
 	-webkit-filter: contrast(150%);
+	-moz-filter: contrast(150%);
+	-ms-filter: contrast(150%);
+	-o-filter: contrast(150%);
+	filter: contrast(150%);
 }
 
 
@@ -875,7 +888,7 @@ footer .copyright{
 #overlay {
 	position: absolute;
 	top: 0;
-	background: rgba(9,35,36,.2);
+	background: rgba(48,196,201,.5);
 	width: 100%;
 	z-index: 100000;
 	margin: 0 !important;
@@ -891,7 +904,7 @@ footer .copyright{
 	margin-left: -500px;
 	z-index:  100001;
 	background: #FCF9FA;
-	box-shadow: 0 0 10px rgba(9,35,36,.5);
+	box-shadow: 0 0 4px rgba(9,35,36,.5);
 	border-radius: 10px;
 }
 
