--- a/css/style.css
+++ b/css/style.css
@@ -566,7 +566,7 @@ td.highlighted .tooltip hr {
 }
 
 .addToCart td {
-	padding: 10px 6px 10px 0;
+	padding: 10px 6px 10px 0;	
 	border-top: solid 1px #30c4c9;
 }
 
@@ -595,6 +595,7 @@ td.highlighted .tooltip hr {
 	margin-bottom: 20px;
 	overflow: hidden;
 	border-radius: 5%;
+	cursor:pointer;
 }
 
 .square .caption {
