--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,7 @@ td.highlighted .tooltip hr {
 }
 #calculateSize.button-huge {
 	background: #30c4c9;
+	display: block;
 }
 #calculateSize.button-huge:hover {
 	background: #092324;
@@ -1056,7 +1057,15 @@ footer .copyright{
 	padding: 10px;
 
 }
-form {
+#clientInfo form {
 	display: block;
 	float: left;
+}
+#clientInfo .button-huge {
+	background-color: #30C4C9;
+	display: block;
+	margin-top: 8em;
+}
+#clientInfo .button-huge:hover {
+	background: #092324;
 }
