--- a/css/style.css
+++ b/css/style.css
@@ -957,8 +957,14 @@ footer .copyright{
 	margin-top: 41px;
 	border-left: solid 1px rgba(9,35,36,.1);
 	border-bottom: solid 1px rgba(9,35,36,.1);
+	z-index: 10;
 }
 
+#shoppingCart #cartDetails {
+}
+#shoppingCart .cartPreview {
+	display: none;
+}
 #shoppingCart table{
 	width: 100%;
 }
